--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/suheyl-yazici/Sass_project2#readme",
   "dependencies": {
+    "lightbox2": "^2.11.3",
     "node-sass": "^7.0.1",
     "owl.carousel": "^2.3.4"
   }
